--- a/TicketBookingManagementApp/src/main/resources/application.properties
+++ b/TicketBookingManagementApp/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+# PORT NUMBER(SERVER IS RUNNING IN THIS PORT NUMBER)
 server.port=8070
+
+# ========================
+# = DATASOURCE
+# ========================
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Hibernate ddl auto (create, create-drop, update): with "update" the database
+# schema will be automatically updated accordingly to java entities found in 
+# the project
+spring.jpa.hibernate.ddl-auto=update
+
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+
+# Show sql in a proper format/single line
+spring.jpa.properties.hibernate.format_sql=true
+
+# Tomcat Connection Port
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=20
+spring.datasource.tomcat.min-idle=15
+
